:memo: Fix player select